# HitboxDobbyy

./: CMakeLists.txt  README.md  build.sh
.github/workflows/: android_build.yml
include/: dobby.h
src/: hitbox_patcher.cpp  hitbox_patcher.h  hook_manager.cpp  hook_manager.h  main.cpp
src/hooks/: chat_hooks.cpp  chat_hooks.h  hook_manager.cpp  hook_manager.h
src/memory/: memory_utils.h  offsets.h
src/utils/: library_utils.cpp  library_utils.h
